--- a/naner_launcher/config/user-settings_with_custom_profiles.json
+++ b/naner_launcher/config/user-settings_with_custom_profiles.json
@@ -1,20 +1,20 @@
 {
-    "DefaultProfile": "PowerShell7",
+    "DefaultProfile": "PowerShell",
     "StartupDir": null,
-    "WindowsTerminalPath": "%CMDLINE%\\terminal2\\wt.exe",
+    "WindowsTerminalPath": "%LOCALAPPDATA%\\Microsoft\\WindowsApps\\wt.exe",
     "CustomProfiles": {
         "PowerShell7": {
-            "ShellPath": "%PS%\\pwsh.exe",
+            "ShellPath": "C:\\Program Files\\PowerShell\\7\\pwsh.exe",
             "Arguments": "-NoLogo",
             "Title": "PowerShell 7"
         },
         "PowerShellPreview": {
-            "ShellPath": "%PS%\\pwsh.exe",
+            "ShellPath": "%ProgramFiles%\\PowerShell\\7-preview\\pwsh.exe",
             "Arguments": "-NoLogo",
             "Title": "PowerShell Preview"
         },
         "CustomPwsh": {
-            "ShellPath": "%PS%\\pwsh.exe",
+            "ShellPath": "%USERPROFILE%\\CustomApps\\PowerShell\\pwsh.exe",
             "Arguments": "-NoLogo -NoExit -Command \"Write-Host 'Custom PowerShell!' -ForegroundColor Cyan\"",
             "Title": "My Custom PowerShell"
         }
