Add portable Bash configuration support - Complete Phase 3.2
This commit implements portable Bash configuration, completing Phase 3
(Portable Developer Identity). Bash now has portable profiles, aliases,
and functions matching the PowerShell experience.

Features:
- Portable .bashrc with Naner branding and custom prompt
- Portable .bash_profile for login shell configuration
- 100+ portable aliases organized by category
- Utility functions for common tasks
- Git branch display in prompt with change indicator
- Consistent Git shortcuts matching PowerShell

Changes:
- Created home/.bashrc (300+ lines)
  * Naner branding and welcome message
  * Custom prompt: [Naner] directory (git:branch) >
  * Git branch detection with uncommitted change indicator
  * Shell options (histappend, checkwinsize, cdspell, globstar)
  * History configuration (10000 commands, timestamps, ignore duplicates)
  * Environment variables (EDITOR=nano, LESS options)
  * Color-coded prompt (cyan, green, yellow)
  * Common aliases (ls, cd, grep with colors)
  * Git shortcuts (gs, ga, gc, gp, gl, gd, glog)
  * Docker shortcuts (dps, di, dex, dlog)
  * Utility functions (mkcd, extract, ff, fd, search)
  * Naner functions (naner-info, naner-aliases, naner-setup, naner-test)
  * Bash completion support
  * Welcome message with quick commands

- Created home/.bash_profile
  * Sources .bashrc for interactive features
  * PATH additions for ~/bin and ~/.local/bin
  * Optional SSH agent initialization (commented)
  * Login-specific customization section

- Created home/.bash_aliases (200+ lines)
  * System aliases (navigation, info, processes)
  * Development aliases (npm, python, serve)
  * Git advanced (gac, gcm, gca, gundo, gclean, gcontrib)
  * Docker advanced (drm, drmi, dstopall, dc shortcuts)
  * File operations (lh, lt, lsize, largest, count, duhh)
  * Network aliases (ports, listening, speedtest, ping5)
  * Text processing (wcl, srt, tf)
  * Archive operations (targz, untargz, mkzip, lszip)
  * Util

--- a/naner_launcher/.gitignore
+++ b/naner_launcher/.gitignore
@@ -55,3 +55,12 @@ home/.config/git/credentials
 !home/.gitconfig
 !home/.config/git/ignore
 !home/.config/git/.gitkeep
+
+# Bash - Protect history and session data
+home/.bash_history
+home/.bash_sessions/
+
+# Bash - Allow profile and aliases
+!home/.bashrc
+!home/.bash_profile
+!home/.bash_aliases
