--- a/src/csharp/Naner.Launcher/Naner.Launcher.csproj
+++ b/src/csharp/Naner.Launcher/Naner.Launcher.csproj
@@ -29,14 +29,9 @@
     <UseSystemResourceKeys>true</UseSystemResourceKeys>
     <IlcOptimizationPreference>Speed</IlcOptimizationPreference>
 
-    <!-- Version information -->
-    <Version>1.0.0</Version>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
+    <!-- Version information (managed in Directory.Build.props) -->
     <Product>Naner Terminal Launcher</Product>
     <Description>Portable terminal environment launcher for Windows</Description>
-    <Copyright>Copyright © 2026</Copyright>
-    <InformationalVersion>1.0.0</InformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
